--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+./alpaca_test.py
+./DailyTrade.py
+*py
+
+# Next.js
+.next/
+out/
+dist/
+
 # Virtual Environment
 venv/
 env/
@@ -12,12 +27,9 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
@@ -25,6 +37,10 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -48,6 +64,16 @@ wheels/
 
 # Environment variables
 .env
+.env.local
+.env.production
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
 .env.local
 
 # Operating System
