--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "date-fns": "^3.0.6",
+    "date-fns-tz": "^3.2.0",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
