--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
