--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^3.0.6",
     "date-fns-tz": "^3.2.0",
     "mongoose": "^8.0.3",
